--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -66,7 +66,7 @@ android {
         }
       }
       maybeImplementProject("core")
-      implementation project(":domain")
+      maybeImplementProject("domain")
     }
   }
 }
