test job every 4 minutes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,3 +188,14 @@ workflows:
             branches:
               only:
                 - master
+  test-flow:
+    triggers:
+      - schedule:
+          cron: "*/4 * * * *"
+          filters:
+            branches:
+              ignore:
+                - master
+    jobs:
+      - verify-pull-request
+
