--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ workflows:
   nightly:
     triggers:
       - schedule:
-          cron: "*\/4 * * * *"
+          cron: "5,10 * * * *"
           filters:
             branches:
               ignore:
