--- a/function/build.gradle
+++ b/function/build.gradle
@@ -22,8 +22,12 @@ tasks.withType(KotlinCompile).configureEach {
 
 dependencies {
   implementation deps.kotlinStdLib
+  implementation deps.kotlinCoroutine
   implementation 'com.google.cloud.functions:functions-framework-api:1.0.0-alpha-2-rc3'
   implementation 'com.google.firebase:firebase-admin:6.12.2'
+  implementation deps.okHttp
+  implementation 'org.jsoup:jsoup:1.13.1'
+  implementation 'com.google.code.gson:gson:2.8.6'
   testImplementation deps.okHttp
   testImplementation("com.squareup.okhttp3:logging-interceptor:4.7.2")
   testImplementation("junit:junit:4.12")
