--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 android.useAndroidX=true
-android.enableJetifier=false
+android.enableJetifier=true
 android.namespacedRClass=true
 
 org.gradle.parallel=true
@@ -8,3 +8,7 @@ org.gradle.configureondemand=true
 
 kotlin.code.style=official
 kotlin.incremental=true
+
+kapt.use.worker.api=false
+kapt.include.compile.classpath=true
+kapt.incremental.apt=false
