enable android.namespacedRClass

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 android.useAndroidX=true
 android.enableJetifier=false
+android.namespacedRClass=true
 
 org.gradle.parallel=true
 org.gradle.caching=true
