add ci insight function

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 android.useAndroidX=true
 android.enableJetifier=true
 android.namespacedRClass=true
+android.enableR8.fullMode=true
+#android.useMinimalKeepRules=true ?
 
 org.gradle.parallel=true
 org.gradle.caching=true
