--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
   dependencies {
     classpath "com.android.tools.build:gradle:4.0.0"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4-M2"
-
+    classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
     // TODO refactor
     classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-rc01"
   }
