--- a/settings.gradle
+++ b/settings.gradle
@@ -17,10 +17,12 @@ buildCache {
   local {
     enabled = true
   }
-  remote(HttpBuildCache) {
-    url = 'http://209.97.161.3:80/cache/'
-    allowUntrustedServer = true
-    push = true
+  if (isInCI) {
+    remote(HttpBuildCache) {
+      url = 'http://209.97.161.3:80/cache/'
+      allowUntrustedServer = true
+      push = true
+    }
   }
 }
 
