--- a/gradle/config.gradle
+++ b/gradle/config.gradle
@@ -8,6 +8,7 @@ ext {
     "core",
     "home",
     "browse",
+    "browseType",
     "data",
     "image",
   ]
@@ -219,7 +220,9 @@ def addAllExternalDependencies = { handler ->
     deps.navigation,
     deps.navigationDynamic,
     deps.okHttp,
+    'androidx.viewpager2:viewpager2:1.0.0',
     'app.cash.contour:contour:0.1.7',
+    'com.google.android.material:material:1.3.0-alpha01',
     'androidx.lifecycle:lifecycle-process:2.3.0-alpha04',
     'com.airbnb.android:epoxy-databinding:2.6.0',
     'com.github.bumptech.glide:glide:4.11.0',
