--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -1,5 +1,3 @@
-import javafx.util.Pair
-
 apply from: "../gradle/config.gradle"
 
 if (dynamic) {
@@ -45,11 +43,11 @@ android {
       implementation project(":app")
     } else {
       // TODO improve this mess
-      def blackList = new HashSet<Pair<String, String>>()
-      blackList.add(new Pair("core", "image"))
+      def blackList = new HashMap<String, String>()
+      blackList.put("core", "image")
       def maybeImplementProject = { dependency ->
         if (project.name != dependency) { // not depend on self
-          if (!blackList.contains(new Pair(project.name, dependency))) {
+          if (blackList[project.name] != dependency) {
             api project(":${dependency}")
           }
         }
