--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -30,6 +30,8 @@ android {
   dependencies { handler ->
     if (!dynamic) {
       addAllExternalDependencies(handler)
+    } else {
+      handler.coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5'
     }
   }
 
