--- a/gradle/config.gradle
+++ b/gradle/config.gradle
@@ -220,6 +220,7 @@ def addAllExternalDependencies = { handler ->
     deps.navigation,
     deps.navigationDynamic,
     deps.okHttp,
+    "org.threeten:threetenbp:1.4.4:no-tzdb",
     'androidx.viewpager2:viewpager2:1.0.0',
     'app.cash.contour:contour:0.1.7',
     'com.google.android.material:material:1.3.0-alpha01',
