Revert "add desugering"
This reverts commit a377024ba276d2a79d6308eb83cd0838efb507bf.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies { handler ->
 }
 
 dependencies {
+  //  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5'
   kapt deps.moshiProcessor
   kapt deps.daggerProcessor
   kapt deps.assistedInjectProccesor
