--- a/image/src/main/AndroidManifest.xml
+++ b/image/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
-<manifest xmlns:dist="http://schemas.android.com/apk/distribution"
-    package="com.nlgtuankiet.fera.image">
+<manifest
+  xmlns:dist="http://schemas.android.com/apk/distribution"
+  package="com.nlgtuankiet.fera.image">
 
-    <dist:module
-        dist:instant="false"
-        dist:title="Image">
-        <dist:delivery>
-            <dist:install-time />
-        </dist:delivery>
-        <dist:fusing dist:include="true" />
-    </dist:module>
+  <dist:module
+    dist:instant="false"
+    dist:title="Image">
+    <dist:delivery>
+      <dist:install-time />
+    </dist:delivery>
+    <dist:fusing dist:include="true" />
+  </dist:module>
 </manifest>
