--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,20 @@ allprojects {
   if (isRunningSpotless) {
     apply plugin: 'com.diffplug.gradle.spotless'
     spotless {
+      format 'xml', {
+        target fileTree('.') {
+          include '**/*.xml', '**/*.xsd'
+          exclude '**/build/**'
+        }
+        // Use for example eclipseWtp('xml', '4.7.3a') to specify a specific version of Eclipse,
+        // available versions are: https://github.com/diffplug/spotless/tree/main/lib-extra/src/main/resources/com/diffplug/spotless/extra/eclipse_wtp_formatters
+        eclipseWtp('xml').configFile "${project.rootProject.rootDir}/spotless.xml.prefs"
+      }
       kotlin {
         target '**/*.kt'
         ktlint("0.37.2").userData(
             [
               'indent_size'             : '2',
-              'continuation_indent_size': '4',
               'insert_final_newline'    : 'true',
               'max_line_length'         : '120'
             ]
