configure: add card, sample codec + codec type

--- a/browseType/src/main/AndroidManifest.xml
+++ b/browseType/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest
   xmlns:dist="http://schemas.android.com/apk/distribution"
-  package="com.nlgtuankiet.fera.configure">
+  package="com.nlgtuankiet.fera.browsetype">
 
   <dist:module
     dist:instant="false"
