--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ kotlin.incremental=true
 kapt.use.worker.api=false
 kapt.include.compile.classpath=true
 kapt.incremental.apt=false
+
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xms12g -Xmx12g -XX:MaxPermSize=1g -Dfile.encoding=UTF-8
