--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,77 +21,9 @@ jobs:
     steps:
       - init
       - run:
-          name: build release apk
-          command: sh ./scripts/build_release_apk.sh
-          no_output_timeout: 30m
-      - run:
-          name: download master apk
-          command: bash ./scripts/download_master_apk.sh
-      - store_artifacts:
-          path: build/universal.apk
-          destination: universal.apk
-      - store_artifacts:
-          path: build/master.apk
-          destination: master.apk
-      - run:
-          name: danger
-          command: bundle install && bundle exec danger --new-comment --dangerfile=compare-apk.danger
-  lint-debug:
-    executor: android_executor
-    steps:
-      - init
-      - run:
-          name: lint debug
-          command: ./gradlew lintDebug
-          no_output_timeout: 1h
-      - run:
-          name: danger
-          command: bundle install && bundle exec danger --new-comment --dangerfile=lint.danger
-      - store_artifacts:
-          path: app/build/reports/lint-results-debug.html
-          destination: app-lint-results-debug.html
-      - store_artifacts:
-          path: core/build/reports/lint-results-debug.html
-          destination: core-lint-results-debug.html
-      - store_artifacts:
-          path: home/build/reports/lint-results-debug.html
-          destination: home-lint-results-debug.html
-  test-debug:
-    executor: android_executor
-    steps:
-      - init
-      - run:
-          name: test debug
-          command: ./gradlew testDebugUnitTest
-          no_output_timeout: 1h
-  spotless-verify:
-    executor: android_executor
-    steps:
-      - init
-      - run:
-          name: spotless verify
-          command: ./gradlew spotlessCheck
-          no_output_timeout: 1h
-  dynamic-build:
-    executor: android_executor
-    steps:
-      - init
-      - run:
-          name: dynamic build include all modules
-          command: ./gradlew :app:bundleDebug -Pdynamic
-          no_output_timeout: 30m
-      - run:
-          name: dynamic build exclude all modules
-          command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*"
-          no_output_timeout: 30m
-  verify-pull-request:
-    executor: android_executor
-    steps:
-      - init
-      - run:
           name: Build release apk
           command: sh ./scripts/build_release_apk.sh
-          no_output_timeout: 25m
+          no_output_timeout: 10m
       - run:
           name: Download master apk
           command: bash ./scripts/download_master_apk.sh
@@ -104,13 +36,17 @@ jobs:
       - run:
           name: Danger apk compare
           command: bundle install && bundle exec danger --new-comment --dangerfile=compare-apk.danger
+  lint:
+    executor: android_executor
+    steps:
+      - init
       - run:
-          name: Lint test spotless
-          command: ./gradlew testDebugUnitTest lintDebug spotlessCheck
-          no_output_timeout: 25m
+          name: Lint
+          command: ./gradlew :app:lintDebug
+          no_output_timeout: 10m
       - run:
           name: Danger lint
-          command: bundle exec danger --new-comment --dangerfile=lint.danger
+          command: bundle install && bundle exec danger --new-comment --dangerfile=lint.danger
       - store_artifacts:
           path: app/build/reports/lint-results-debug.html
           destination: app-lint-results-debug.html
@@ -120,14 +56,26 @@ jobs:
       - store_artifacts:
           path: home/build/reports/lint-results-debug.html
           destination: home-lint-results-debug.html
+  test-spotless:
+    executor: android_executor
+    steps:
+      - init
+      - run:
+          name: Test spotless
+          command: ./gradlew testDebugUnitTest spotlessCheck
+          no_output_timeout: 10m
+  dynamic-build:
+    executor: android_executor
+    steps:
+      - init
       - run:
           name: Dynamic build include all modules
-          command: ./gradlew :app:bundleDebug -Pdynamic --offline
-          no_output_timeout: 25m
+          command: ./gradlew :app:bundleDebug -Pdynamic
+          no_output_timeout: 10m
       - run:
           name: Dynamic build exclude all modules
-          command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*" --offline
-          no_output_timeout: 25m
+          command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*"
+          no_output_timeout: 10m
   upload-apk:
     executor: android_executor
     steps:
@@ -150,31 +98,26 @@ workflows:
   version: 2
   pull-request-flow:
     jobs:
-      #      - compare-apk:
-      #          filters:
-      #            branches:
-      #              ignore:
-      #                - master
-      #      - dynamic-build:
-      #          filters:
-      #            branches:
-      #              ignore:
-      #                - master
-      #      - lint-debug:
-      #          filters:
-      #            branches:
-      #              ignore:
-      #                - master
-      #      - test-debug:
-      #          filters:
-      #            branches:
-      #              ignore:
-      #                - master
-      #      - spotless-verify:
-      #          filters:
-      #            branches:
-      #              ignore:
-      #                - master
+      - compare-apk:
+          filters:
+            branches:
+              ignore:
+                - master
+      - lint:
+          filters:
+            branches:
+              ignore:
+                - master
+      - test-spotless:
+          filters:
+            branches:
+              ignore:
+                - master
+      - dynamic-build:
+          filters:
+            branches:
+              ignore:
+                - master
       - verify-pull-request:
           filters:
             branches:
@@ -188,12 +131,3 @@ workflows:
             branches:
               only:
                 - master
-
-  benchmark-verify-pull-request-v3:
-    jobs:
-      - upload-apk:
-          filters:
-            branches:
-              only:
-                - nab
-
